fibanocciParser.java
// Generated from fibanocci.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class fibanocciParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		WS=32, USING=33, SYSTEM=34, DOT=35, CLASS=36, STATIC=37, PUBLIC=38, PRIVATE=39, 
		PROTECTED=40, IF=41, FOR=42, WHILE=43, TYPE=44, INT=45, CHAR=46, VOID=47, 
		ID=48, OPEN_PARENS=49, CLOSE_PARENS=50, NUMBER=51, INTEGER_LITERAL=52, 
		STRING_LITERAL=53, CHAR_LITERAL=54, COMMENT=55, MULTILINE_COMMENT=56, 
		ABSTRACT=57, ADD=58, ARGS=59, PARSE=60, READLINE=61, ALIAS=62, ARGLIST=63, 
		AS=64, ASCENDING=65, ASYNC=66, AWAIT=67, BASE=68, BOOL=69, BREAK=70, BY=71, 
		BYTE=72, CASE=73, CATCH=74, CHECKED=75, CONST=76, CONTINUE=77, DECIMAL=78, 
		DEFAULT=79, DELEGATE=80, DESCENDING=81, DO=82, DOUBLE=83, DYNAMIC=84, 
		ELSE=85, ENUM=86, EQUALS=87, EVENT=88, EXPLICIT=89, EXTERN=90, FALSE=91, 
		FINALLY=92, FIXED=93, FLOAT=94, FOREACH=95, FROM=96, GET=97, GOTO=98, 
		GROUP=99, IMPLICIT=100, IN=101, INTERFACE=102, INTERNAL=103, INTO=104, 
		IS=105, JOIN=106, LET=107, LOCK=108, LONG=109, NAMEOF=110, NAMESPACE=111, 
		NEW=112, NULL_=113, OBJECT=114, ON=115, OPERATOR=116, ORDERBY=117, OUT=118, 
		OVERRIDE=119, PARAMS=120, PARTIAL=121, READONLY=122, REF=123, REMOVE=124, 
		RETURN=125, SBYTE=126, SEALED=127, SELECT=128, MAIN=129, CONSOLE=130, 
		WRITE=131, SET=132, SHORT=133, SIZEOF=134, STACKALLOC=135, STRINGS=136, 
		STRUCT=137, SWITCH=138, THIS=139, THROW=140, TRUE=141, TRY=142, TYPEOF=143, 
		UINT=144, ULONG=145, UNCHECKED=146, UNMANAGED=147, UNSAFE=148, USHORT=149, 
		VAR=150, VIRTUAL=151, VOLATILE=152, WHEN=153, WHERE=154, YIELD=155;
	public static final int
		RULE_run = 0, RULE_prog = 1, RULE_visibility = 2, RULE_output = 3, RULE_input = 4, 
		RULE_using_directive = 5, RULE_lib = 6, RULE_class_ = 7, RULE_val = 8, 
		RULE_function_signature = 9, RULE_function_parameters = 10, RULE_dimension_specifier = 11, 
		RULE_local_variable_declarator = 12, RULE_local_variable_initializer = 13, 
		RULE_def = 14, RULE_decl = 15, RULE_block = 16, RULE_expr = 17, RULE_operators = 18, 
		RULE_unaryoperator = 19, RULE_binaryoperator = 20, RULE_arithmetic = 21, 
		RULE_logical = 22, RULE_bitwise = 23, RULE_assignment = 24, RULE_relational = 25, 
		RULE_stat = 26, RULE_funcHeader = 27, RULE_args = 28, RULE_arg = 29, RULE_keyword = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"run", "prog", "visibility", "output", "input", "using_directive", "lib", 
			"class_", "val", "function_signature", "function_parameters", "dimension_specifier", 
			"local_variable_declarator", "local_variable_initializer", "def", "decl", 
			"block", "expr", "operators", "unaryoperator", "binaryoperator", "arithmetic", 
			"logical", "bitwise", "assignment", "relational", "stat", "funcHeader", 
			"args", "arg", "keyword"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'='", "');'", "','", "'['", "']'", "'{'", "'}'", "'+'", 
			"'++'", "'--'", "'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", "'<<'", 
			"'>>'", "'|'", "'^'", "'&'", "'~'", "'<'", "'<='", "'>'", "'>='", "'=='", 
			"'!='", "'Main(string[] args)'", null, "'using'", "'System'", "'.'", 
			"'class'", "'static'", "'public'", "'private'", "'protected'", "'if'", 
			"'for'", "'while'", null, "'int'", "'char'", "'void'", null, "'('", "')'", 
			null, null, null, null, null, null, "'abstract'", "'add'", "'args'", 
			"'Parse'", "'ReadLine()'", "'alias'", "'__arglist'", "'as'", "'ascending'", 
			"'async'", "'await'", "'base'", "'bool'", "'break'", "'by'", "'byte'", 
			"'case'", "'catch'", "'checked'", "'const'", "'continue'", "'decimal'", 
			"'default'", "'delegate'", "'descending'", "'do'", "'double'", "'dynamic'", 
			"'else'", "'enum'", "'equals'", "'event'", "'explicit'", "'extern'", 
			"'false'", "'finally'", "'fixed'", "'float'", "'foreach'", "'from'", 
			"'get'", "'goto'", "'group'", "'implicit'", "'in'", "'interface'", "'internal'", 
			"'into'", "'is'", "'join'", "'let'", "'lock'", "'long'", "'nameof'", 
			"'namespace'", "'new'", "'null'", "'object'", "'on'", "'operator'", "'orderby'", 
			"'out'", "'override'", "'params'", "'partial'", "'readonly'", "'ref'", 
			"'remove'", "'return'", "'sbyte'", "'sealed'", "'select'", "'Main'", 
			"'Console'", "'Write'", "'set'", "'short'", "'sizeof'", "'stackalloc'", 
			"'string'", "'struct'", "'switch'", "'this'", "'throw'", "'true'", "'try'", 
			"'typeof'", "'uint'", "'ulong'", "'unchecked'", "'unmanaged'", "'unsafe'", 
			"'ushort'", "'var'", "'virtual'", "'volatile'", "'when'", "'where'", 
			"'yield'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "WS", "USING", "SYSTEM", 
			"DOT", "CLASS", "STATIC", "PUBLIC", "PRIVATE", "PROTECTED", "IF", "FOR", 
			"WHILE", "TYPE", "INT", "CHAR", "VOID", "ID", "OPEN_PARENS", "CLOSE_PARENS", 
			"NUMBER", "INTEGER_LITERAL", "STRING_LITERAL", "CHAR_LITERAL", "COMMENT", 
			"MULTILINE_COMMENT", "ABSTRACT", "ADD", "ARGS", "PARSE", "READLINE", 
			"ALIAS", "ARGLIST", "AS", "ASCENDING", "ASYNC", "AWAIT", "BASE", "BOOL", 
			"BREAK", "BY", "BYTE", "CASE", "CATCH", "CHECKED", "CONST", "CONTINUE", 
			"DECIMAL", "DEFAULT", "DELEGATE", "DESCENDING", "DO", "DOUBLE", "DYNAMIC", 
			"ELSE", "ENUM", "EQUALS", "EVENT", "EXPLICIT", "EXTERN", "FALSE", "FINALLY", 
			"FIXED", "FLOAT", "FOREACH", "FROM", "GET", "GOTO", "GROUP", "IMPLICIT", 
			"IN", "INTERFACE", "INTERNAL", "INTO", "IS", "JOIN", "LET", "LOCK", "LONG", 
			"NAMEOF", "NAMESPACE", "NEW", "NULL_", "OBJECT", "ON", "OPERATOR", "ORDERBY", 
			"OUT", "OVERRIDE", "PARAMS", "PARTIAL", "READONLY", "REF", "REMOVE", 
			"RETURN", "SBYTE", "SEALED", "SELECT", "MAIN", "CONSOLE", "WRITE", "SET", 
			"SHORT", "SIZEOF", "STACKALLOC", "STRINGS", "STRUCT", "SWITCH", "THIS", 
			"THROW", "TRUE", "TRY", "TYPEOF", "UINT", "ULONG", "UNCHECKED", "UNMANAGED", 
			"UNSAFE", "USHORT", "VAR", "VIRTUAL", "VOLATILE", "WHEN", "WHERE", "YIELD"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "fibanocci.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public fibanocciParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RunContext extends ParserRuleContext {
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public RunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_run; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fibanocciListener ) ((fibanocciListener)listener).enterRun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fibanocciListener ) ((fibanocciListener)listener).exitRun(this);
		}
	}

	public final RunContext run() throws RecognitionException {
		RunContext _localctx = new RunContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_run);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			prog();
			System.out.println("Success");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgContext extends ParserRuleContext {
		public Class_Context class_() {
			return getRuleContext(Class_Context.class,0);
		}
		public List<Using_directiveContext> using_directive() {
			return getRuleContexts(Using_directiveContext.class);
		}
		public Using_directiveContext using_directive(int i) {
			return getRuleContext(Using_directiveContext.class,i);
		}
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public DefContext def() {
			return getRuleContext(DefContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(fibanocciParser.COMMENT, 0); }
		public TerminalNode MULTILINE_COMMENT() { return getToken(fibanocciParser.MULTILINE_COMMENT, 0); }
		public TerminalNode EOF() { return getToken(fibanocciParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fibanocciListener ) ((fibanocciListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fibanocciListener ) ((fibanocciListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prog);
		int _la;
		try {
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(66); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(65);
					using_directive();
					}
					}
					setState(68); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==USING );
				setState(70);
				class_();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				class_();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				decl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(74);
				def();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(75);
				expr();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(76);
				match(COMMENT);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(77);
				match(MULTILINE_COMMENT);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(78);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VisibilityContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(fibanocciParser.PUBLIC, 0); }
		public TerminalNode PRIVATE() { return getToken(fibanocciParser.PRIVATE, 0); }
		public TerminalNode PROTECTED() { return getToken(fibanocciParser.PROTECTED, 0); }
		public VisibilityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_visibility; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fibanocciListener ) ((fibanocciListener)listener).enterVisibility(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fibanocciListener ) ((fibanocciListener)listener).exitVisibility(this);
		}
	}

	public final VisibilityContext visibility() throws RecognitionException {
		VisibilityContext _localctx = new VisibilityContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_visibility);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIVATE) | (1L << PROTECTED))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputContext extends ParserRuleContext {
		public TerminalNode CONSOLE() { return getToken(fibanocciParser.CONSOLE, 0); }
		public TerminalNode DOT() { return getToken(fibanocciParser.DOT, 0); }
		public TerminalNode WRITE() { return getToken(fibanocciParser.WRITE, 0); }
		public TerminalNode OPEN_PARENS() { return getToken(fibanocciParser.OPEN_PARENS, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(fibanocciParser.STRING_LITERAL, 0); }
		public TerminalNode CLOSE_PARENS() { return getToken(fibanocciParser.CLOSE_PARENS, 0); }
		public List<TerminalNode> ID() { return getTokens(fibanocciParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(fibanocciParser.ID, i);
		}
		public OutputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fibanocciListener ) ((fibanocciListener)listener).enterOutput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fibanocciListener ) ((fibanocciListener)listener).exitOutput(this);
		}
	}

	public final OutputContext output() throws RecognitionException {
		OutputContext _localctx = new OutputContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_output);
		int _la;
		try {
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				match(CONSOLE);
				setState(84);
				match(DOT);
				setState(85);
				match(WRITE);
				setState(86);
				match(OPEN_PARENS);
				setState(87);
				match(STRING_LITERAL);
				setState(88);
				match(CLOSE_PARENS);
				setState(89);
				match(T__0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				match(CONSOLE);
				setState(91);
				match(DOT);
				setState(92);
				match(WRITE);
				setState(93);
				match(OPEN_PARENS);
				setState(95); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(94);
					match(ID);
					}
					}
					setState(97); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ID );
				setState(99);
				match(STRING_LITERAL);
				setState(100);
				match(CLOSE_PARENS);
				setState(101);
				match(T__0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				match(CONSOLE);
				setState(103);
				match(DOT);
				setState(104);
				match(WRITE);
				setState(105);
				match(OPEN_PARENS);
				setState(106);
				match(ID);
				setState(107);
				match(CLOSE_PARENS);
				setState(108);
				match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(fibanocciParser.ID, 0); }
		public TerminalNode TYPE() { return getToken(fibanocciParser.TYPE, 0); }
		public List<TerminalNode> DOT() { return getTokens(fibanocciParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(fibanocciParser.DOT, i);
		}
		public List<KeywordContext> keyword() {
			return getRuleContexts(KeywordContext.class);
		}
		public KeywordContext keyword(int i) {
			return getRuleContext(KeywordContext.class,i);
		}
		public TerminalNode OPEN_PARENS() { return getToken(fibanocciParser.OPEN_PARENS, 0); }
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fibanocciListener ) ((fibanocciListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fibanocciListener ) ((fibanocciListener)listener).exitInput(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_input);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(ID);
			setState(112);
			match(T__1);
			setState(113);
			match(TYPE);
			setState(114);
			match(DOT);
			setState(115);
			keyword();
			setState(116);
			match(OPEN_PARENS);
			setState(117);
			keyword();
			setState(118);
			match(DOT);
			setState(119);
			keyword();
			setState(120);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Using_directiveContext extends ParserRuleContext {
		public TerminalNode USING() { return getToken(fibanocciParser.USING, 0); }
		public TerminalNode SYSTEM() { return getToken(fibanocciParser.SYSTEM, 0); }
		public LibContext lib() {
			return getRuleContext(LibContext.class,0);
		}
		public Using_directiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_using_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fibanocciListener ) ((fibanocciListener)listener).enterUsing_directive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fibanocciListener ) ((fibanocciListener)listener).exitUsing_directive(this);
		}
	}

	public final Using_directiveContext using_directive() throws RecognitionException {
		Using_directiveContext _localctx = new Using_directiveContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_using_directive);
		try {
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				match(USING);
				setState(123);
				match(SYSTEM);
				setState(124);
				match(T__0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				match(USING);
				setState(126);
				match(SYSTEM);
				setState(127);
				lib();
				setState(128);
				match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LibContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(fibanocciParser.DOT, 0); }
		public TerminalNode ID() { return getToken(fibanocciParser.ID, 0); }
		public LibContext lib() {
			return getRuleContext(LibContext.class,0);
		}
		public LibContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lib; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fibanocciListener ) ((fibanocciListener)listener).enterLib(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fibanocciListener ) ((fibanocciListener)listener).exitLib(this);
		}
	}

	public final LibContext lib() throws RecognitionException {
		LibContext _localctx = new LibContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_lib);
		try {
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				match(DOT);
				setState(133);
				match(ID);
				setState(134);
				lib();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				match(DOT);
				setState(136);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_Context extends ParserRuleContext {
		public VisibilityContext visibility() {
			return getRuleContext(VisibilityContext.class,0);
		}
		public TerminalNode CLASS() { return getToken(fibanocciParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(fibanocciParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Class_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_; }
		@Override
